src/test/deca/context/valid/personalTests/not.deca
// Test NOT

{
    boolean a = false;
    boolean b = !a;

    if(!a) {
        println("a is false");
    } else {
        println("a is true");
    }

    if(b) {
        println("b is true");
    } else {
        println("b is false");
    }
}