src/test/deca/context/invalid/personalTests/instanceofBoolean.deca
class A{
    int a;
}

{
    boolean a = true;
    if(a instanceof A){
        println("true");
    }
    else{
        println("false");
    }
}